[#692] fixes IE7 overflow bug in project search results

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1115,6 +1115,7 @@ a:hover {
         color:#ffffff;
 	height:43px;
 	border-top:0;
+  position:relative;
         }
 
 #account ul#account-info {
